@@ -66,6 +66,7 @@ interface
   at the root node as well as final dual bound of the root node and LP iterations for processing the root node
   (those where listed in the "Solutions" section before, named "Root Dual Bound" and "Root Iterations")
 - new method SCIPstoreSolutionGap() in scip.c, to store the gap when the first and last solution is found
+- methods SCIPparseVar(), SCIPvarParseOriginal(), and SCIPvarParseTransformed() now return the end of the parsed string
 
 parameters:
 - new parameter <lp/disablecutoff> (default FALSE), by which the LP cutoff bound can be disabled (when set to TRUE)
